# Generated by Django 5.2.7 on 2025-10-08 07:20

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Feature',
            fields=[
                ('is_deleted', models.BooleanField(default=False, verbose_name='是否删除')),
                ('id', models.CharField(help_text='格式：feature-xxx', max_length=64, primary_key=True, serialize=False, verbose_name='特性唯一ID')),
                ('feature_name', models.CharField(max_length=100, verbose_name='特性名称')),
                ('module_id', models.CharField(help_text='外键：tb_module.id', max_length=64, verbose_name='所属模块ID')),
                ('description', models.TextField(blank=True, null=True, verbose_name='特性描述')),
                ('case_count', models.IntegerField(default=0, verbose_name='关联用例数')),
                ('creator', models.CharField(help_text='关联tb_user.id', max_length=64, verbose_name='创建人')),
                ('create_time', models.DateTimeField(auto_now_add=True, verbose_name='创建时间')),
                ('update_time', models.DateTimeField(auto_now=True, verbose_name='更新时间')),
            ],
            options={
                'verbose_name': '特性信息',
                'verbose_name_plural': '特性信息',
                'db_table': 'tb_feature',
                'ordering': ['-create_time'],
                'indexes': [models.Index(fields=['module_id'], name='idx_module'), models.Index(fields=['creator'], name='feature_idx_creator')],
            },
        ),
        migrations.CreateModel(
            name='Module',
            fields=[
                ('is_deleted', models.BooleanField(default=False, verbose_name='是否删除')),
                ('id', models.CharField(help_text='格式：module-xxx', max_length=64, primary_key=True, serialize=False, verbose_name='模块唯一ID')),
                ('module_name', models.CharField(help_text='模块名称', max_length=100, unique=True, verbose_name='模块名称')),
                ('chip_model', models.CharField(help_text='如 Chip-A-1.0', max_length=64, verbose_name='所属芯片型号')),
                ('description', models.TextField(blank=True, null=True, verbose_name='模块描述')),
                ('creator', models.CharField(help_text='关联tb_user.id', max_length=64, verbose_name='创建人')),
                ('feature_count', models.IntegerField(default=0, verbose_name='关联特性总数')),
                ('create_time', models.DateTimeField(auto_now_add=True, verbose_name='创建时间')),
                ('update_time', models.DateTimeField(auto_now=True, verbose_name='更新时间')),
            ],
            options={
                'verbose_name': '模块信息',
                'verbose_name_plural': '模块信息',
                'db_table': 'tb_module',
                'ordering': ['-create_time'],
                'indexes': [models.Index(fields=['creator'], name='module_idx_creator'), models.Index(fields=['chip_model'], name='idx_chip')],
            },
        ),
    ]
