# Generated by Django 5.2.7 on 2025-10-07 09:30

import django.utils.timezone
import test_suite.models
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='TestSuite',
            fields=[
                ('id', models.CharField(default=test_suite.models.generate_suite_id, max_length=64, primary_key=True, serialize=False)),
                ('name', models.CharField(max_length=128)),
                ('description', models.TextField(blank=True, null=True)),
                ('visible_scope', models.CharField(choices=[('private', '私有'), ('project', '项目可见')], default='private', max_length=32)),
                ('creator', models.CharField(max_length=64)),
                ('case_count', models.IntegerField(default=0)),
                ('create_time', models.DateTimeField(default=django.utils.timezone.now)),
                ('update_time', models.DateTimeField(auto_now=True)),
            ],
            options={
                'indexes': [models.Index(fields=['creator'], name='idx_creator'), models.Index(fields=['visible_scope'], name='idx_scope')],
            },
        ),
    ]
